@@ -93,6 +93,7 @@
 	  - weeping archangels
 	  - deep orcs
 	  - evil eyes
+	  - shambling horrors (from Sporkhack)
 
 	* new levels:
 	  - Black market version with One-eyed Sam promoted to management
